--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,8 +1,8 @@
 version: '2'
 
 template:
-  name: "DYML - $env script encoding & escaping"
-  description: "DYML - $env script encoding & escaping"
+  name: "DYML - $env Script Sandboxing: Encoding/Escaping"
+  description: "DYML - $env Script Sandboxing: Encoding/Escaping"
   required:
     - build
     - frontend-repo
@@ -14,7 +14,7 @@ template:
       '[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')'
       
 toolchain:
-  name: 'DYML - $env script encoding & escaping'
+  name: 'DYML - $env Script Sandboxing: Encoding/Escaping'
 
 services:
 
