--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,7 +30,7 @@ services:
       env8: $env.foo.bar
       #env9: $env.services.repo
       #env10: $env.services.repo.parameters
-      #env11: $env.services
+      env11: $env.services
       #env12: $env.form
       env13: >
         $env.services.repo.parameters.env1 === $env.services.build.parameters.test5
