--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -31,7 +31,7 @@ services:
       #env9: $env.services.repo
       #env10: $env.services.repo.parameters
       env11: $env.services
-      #env12: $env.form
+      env12: $env.form
       env13: >
         $env.services.repo.parameters.env1 === $env.services.build.parameters.test5
 
