--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -29,7 +29,7 @@ services:
       env7: $env.foo
       env8: $env.foo.bar
       env9: $env.services.repo
-      #env10: $env.services.repo.parameters
+      env10: $env.services.repo.parameters
       env11: $env.services
       env12: $env.form
       env13: >
