--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -46,7 +46,15 @@ services:
       env_9: $env.services.repo.parameters.env_10
       env_10: $env.services.repo.parameters.env_11
       env_11: $env.services.repo.parameters.env_12
-      env_12: "Hello world from env_12"
+      env_12: $env.services.repo.parameters.env_13
+      env_13: $env.services.repo.parameters.env_14
+      env_14: $env.services.repo.parameters.env_15
+      env_15: $env.services.repo.parameters.env_16
+      env_16: $env.services.repo.parameters.env_17
+      env_17: $env.services.repo.parameters.env_18
+      env_18: $env.services.repo.parameters.env_19
+      env_19: $env.services.repo.parameters.env_20
+      env_20: "Hello world from env_20"
 
       # mustache params...
       #must1: "{{services.repo.service_id}}"
