--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -60,23 +60,23 @@ services:
 
       # indirection... complexes with indirection to $env.path refs...
       env_a: >
-        $env.a ? false : "$env.services.repo.parameters.env_b"
+        $env.a ? false : $env.services.repo.parameters.env_b
       env_b: >
-        $env.a ? false : "$env.services.repo.parameters.env_c"
+        $env.a ? false : $env.services.repo.parameters.env_c
       env_c: >
-        $env.a ? false : "$env.services.repo.parameters.env_d"
+        $env.a ? false : $env.services.repo.parameters.env_d
       env_d: >
-        $env.a ? false : "$env.services.repo.parameters.env_e"
+        $env.a ? false : $env.services.repo.parameters.env_e
       env_e: >
-        $env.a ? false : "$env.services.repo.parameters.env_f"
+        $env.a ? false : $env.services.repo.parameters.env_f
       env_f: >
-        $env.a ? false : "$env.services.repo.parameters.env_g"
+        $env.a ? false : $env.services.repo.parameters.env_g
       env_g: >
-        $env.a ? false : "$env.services.repo.parameters.env_h"
+        $env.a ? false : $env.services.repo.parameters.env_h
       env_h: >
-        $env.a ? false : "$env.services.repo.parameters.env_i"
+        $env.a ? false : $env.services.repo.parameters.env_i
       env_i: >
-        $env.a ? false : "$env.services.repo.parameters.env_j"
+        $env.a ? false : $env.services.repo.parameters.env_j
       env_j: "Hello world from env_j"
 
       # mustache params...
