--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -81,7 +81,11 @@ services:
         $env.a ? false : $env.services.repo.parameters.env_k
       env_k: >
         $env.a ? false : $env.services.repo.parameters.env_l
-      env_l: "Hello world from env_l"
+      env_l: >
+        $env.a ? false : $env.services.repo.parameters.env_m
+      env_m: >
+        $env.a ? false : $env.services.repo.parameters.env_n
+      env_n: "Hello world from env_n"
 
       # mustache params...
       #must1: "{{services.repo.service_id}}"
