--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -115,7 +115,7 @@ services:
         $env.ww ? "$env.branch" : "$env.branch + ' ' + $env.env_id"
 
       env_xx: >
-        $env.xx ? "$env.repository" : "'foo: ' + $env.foo + ' foo.bar: {{foo.bar}}'"
+        $env.xx ? "$env.repository" : "'$env.foo: ' + $env.foo + ' {{foo.bar}}: {{foo.bar}}'"
 
       # mustache params...
       must1: "{{services.repo.service_id}}"
