--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -111,11 +111,14 @@ services:
       env_z: >
         $env.z ? "$env.timestamp" : "$env.services.build.service_id + ' ' + $env.timestamp"
 
-      env_ww: >
-        $env.ww ? "$env.branch" : "$env.branch + ' ' + $env.env_id"
+      env_z1: >
+        $env.z1 ? "$env.branch" : "$env.branch + ' ' + $env.env_id"
 
-      env_xx: >
-        $env.xx ? "$env.repository" : "'$env.foo: ' + $env.foo + ' {{foo.bar}}: {{foo.bar}}'"
+      env_z2: >
+        $env.z2 ? "$env.repository" : "'foo serverside env: ' + $env.foo + ' and foo clientside mustache: {{foo}}'"
+
+      env_z3: >
+        $env.z3 ? "$env.repository" : "'foo.bar serverside env: ' + $env.foo.bar + ' and foo.bar clientside mustache: {{foo.bar}}'"
 
       # mustache params...
       must1: "{{services.repo.service_id}}"
