--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -7,6 +7,7 @@ template:
   $configuration:
     EVALUATION_DEPTH: 10
     EVALUATE_TIMESTAMP_SERVERSIDE: true
+    BASIC_WARNINGS: false
 
   required:
     - repo
