--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -19,19 +19,20 @@ template:
 toolchain:
   name: 'DYML_SECRETS_VIA_ENV_ENGINE'
 
-  #$configuration:
+  $configuration:
     #EVALUATION_DEPTH: 10
     #EVALUATE_TIMESTAMP_SERVERSIDE: true
     #BASIC_WARNINGS: false
     #EXPRESSION_MAXLENGTH: 200
-    #RESOLVE_SECRETS_SERVERSIDE: true
+    
+    ENABLE_SECRET_EXPANSION: true
 
 services:
   repo:
     service_id: hostedgit
     parameters:
       test1: >
-        $env.getSecret()
+        $env.getSecret("")
       test2: $env.timestamp
 
 form:
